@@ -64,7 +64,7 @@ class turbostat extends pts_module_interface
 	}
 	public static function __pre_test_run(&$test_run_request)
 	{
-		$test_run_request->exec_binary_prepend = 'turbostat -o ' . self::$turbostat_log_dir . str_replace(array(' ', '/', '.'), '_', trim($test_run_request->test_profile->get_identifier() . ' ' . $test_run_request->get_arguments_description())) . '.log ';
+		$test_run_request->exec_binary_prepend = 'turbostat -o ' . self::$turbostat_log_dir . str_replace(array(' ', '/', '.', ':'), '_', trim($test_run_request->test_profile->get_identifier() . ' ' . $test_run_request->get_arguments_description())) . '.log ';
 	}
 }
 ?>
